--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -25,8 +25,10 @@ mysql_db: mysql://user:password@example.domain.com/database?charset=utf8
 name_1: jim
 notify_ios: notify.some_phone
 path_fail2ban: /tmp/diskinfo/fail2ban.log
-path_disk_0: /tmp/diskinfo/diskinfo.txt
 path_disk_1: /tmp/diskinfo/diskinfo1.txt
+path_disk_2: /tmp/diskinfo/diskinfo2.txt
+path_disk_3: /tmp/diskinfo/diskinfo3.txt
+path_disk_4: /tmp/diskinfo/diskinfo4.txt
 person_1: person.jim
 person_1_id: jim
 person_1_name: Jim
