adopt github-workflow for additional file sensors

--- a/.github/workflows/hass-config-check.yml
+++ b/.github/workflows/hass-config-check.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           mv .not_secrets.yaml config/secrets.yaml
           mkdir -p /tmp/diskinfo && chmod 775 /tmp/diskinfo
-          touch /tmp/diskinfo/fail2ban.log && touch /tmp/diskinfo/diskinfo.txt && touch /tmp/diskinfo/diskinfo1.txt && touch /tmp/diskinfo/sshkey
+          touch /tmp/diskinfo/fail2ban.log && touch /tmp/diskinfo/diskinfo1.txt && touch /tmp/diskinfo/diskinfo2.txt && touch /tmp/diskinfo/diskinfo3.txt && touch /tmp/diskinfo/diskinfo4.txt && touch /tmp/diskinfo/sshkey
           chmod 775 /tmp/diskinfo/*
       - name: Home Assistant get version
         run: python3 -m homeassistant --version
@@ -64,7 +64,7 @@ jobs:
         run: |
           mv .not_secrets.yaml config/secrets.yaml
           mkdir -p /tmp/diskinfo && chmod 775 /tmp/diskinfo
-          touch /tmp/diskinfo/fail2ban.log && touch /tmp/diskinfo/diskinfo.txt && touch /tmp/diskinfo/diskinfo1.txt && touch /tmp/diskinfo/sshkey
+          touch /tmp/diskinfo/fail2ban.log && touch /tmp/diskinfo/diskinfo1.txt && touch /tmp/diskinfo/diskinfo2.txt && touch /tmp/diskinfo/diskinfo3.txt && touch /tmp/diskinfo/diskinfo4.txt && touch /tmp/diskinfo/sshkey
           chmod 775 /tmp/diskinfo/*
       - name: Home Assistant get version
         run: python3 -m homeassistant --version
