set device class for temperature and humidity sensors

--- a/config/customization/customize_global.yaml
+++ b/config/customization/customize_global.yaml
@@ -10,3 +10,7 @@
   friendly_name: home
 "zone.*":
   track_ios: false
+"sensor.*temperature*":
+  device_class: temperature
+"sensor.*humidity*":
+  device_class: humidity
