--- a/config/themes/home_light.yaml
+++ b/config/themes/home_light.yaml
@@ -71,3 +71,8 @@ home_light:
   switch-unchecked-color: "var(--paper-toggle-button-unchecked-bar-color)"
   switch-unchecked-track-color: "var(--paper-toggle-button-unchecked-bar-color)"
   paper-input-container-shared-input-style_-_font-size: "var(--font-size)"
+  # softui
+  softui-boxshadow-top: "rgba(255,255,255,.5)"
+  softui-boxshadow-bottom: "rgba(0,0,0,.03)"
+  softui-bigbutton-boxshadow: "-8px -8px 8px 0 var(--softui-boxshadow-top),8px 8px 8px 0 var(--softui-boxshadow-bottom)"
+  softui-standard-boxshadow: "-4px -4px 4px 0 var(--softui-boxshadow-top),4px 4px 4px 0 var(--softui-boxshadow-bottom)"
